<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="90dp"
        android:scaleType="fitXY"
        android:src="@drawable/foto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_marginStart="80dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/my_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="360dp"
        android:text="@string/email"
        android:textSize="14sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonTap"
        android:text="@string/send_email"
        style="@style/ButtonGeneral"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="167dp" />



</RelativeLayout>